Comment out printing every crime to console.